--- a/ezchatv2/appsettings.json
+++ b/ezchatv2/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "http_port": 80,
+  "https_port": 443,
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "None",
+      "Microsoft": "None",
+      "Microsoft.Hosting.Lifetime": "None",
+      "Microsoft.Hosting.Lifetime[0]": "None"
     }
   },
   "AllowedHosts": "*"
