fixed client list updating and banning

--- a/ezchatv2/admin/config.toml
+++ b/ezchatv2/admin/config.toml
@@ -23,7 +23,7 @@ escapeLink = "https://google.com"
 [admin]
 
 # admin uids
-adminUids = ["admin_uid1", "admin_uid2"]
+adminUids = ["admin_uid1", "admin_uid2", "PkRlns8WAZpwRjzQpDXjcA"]
 
 # use ?admin=true attribute
 # HUGE SECURITY PROBLEM
