--- a/ezchatv2/ezchatv2.csproj
+++ b/ezchatv2/ezchatv2.csproj
@@ -27,6 +27,9 @@
     <None Update="admin\config.toml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="filesystem\none.none">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
