--- a/ezchatv2/ezchatv2.csproj
+++ b/ezchatv2/ezchatv2.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.11" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Tommy" Version="3.0.1" />
   </ItemGroup>
