--- a/ezchatv2/ezchatv2.csproj
+++ b/ezchatv2/ezchatv2.csproj
@@ -28,7 +28,7 @@
     <None Update="admin\config.toml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="filesystem\none.none">
+    <None Update="filesystem\none.ezfs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
